[package]
name = "tello-driver"
version = "0.1.0"
authors = ["ckie <git-525ff67@ckie.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serial = "0.4"
#tello = "0.6.3"
tello = { path = "rust-tello" }
